Finished all node icons. Written code to handle redrawing right panel

--- a/SPQR2/translations/translations.csv
+++ b/SPQR2/translations/translations.csv
@@ -12,3 +12,19 @@
 "TERRAIN_FLAT","The terrain in this region is generally very flat."
 "TERRAIN_DESERT","This region mainly consists of hot, dry desert."
 "TERRAIN_FOREST","This region is mainly forests and woods."
+"NODE_ICON_FISH","Fishing is very productive in this region."
+"NODE_ICON_WINE","The wine in this area is famous for it’s quality."
+"NODE_ICON_COLOSSEUM","This area contains a famous colosseum."
+"NODE_ICON_AQUEDUCT","This area has an impressive aqueduct to carry water."
+"NODE_ICON_PORT","This city has a port."
+"NODE_ICON_HISTORY","The area has produced a famous work of historical writing."
+"NODE_ICON_MUSIC","Music is studies and produced here."
+"NODE_ICON_ENGINEERING","A school of philosophy has been constructed here."
+"NODE_ICON_TEMPLE","This area holds a temple of some renown."
+"NODE_ICON_MATHS","The area has a school of mathematics."
+"NODE_ICON_WRITING","This area homes a famous writer."
+"NODE_ICON_GRAINS","The food produced here is of exceptional quality."
+"NODE_ICON_CLOTH","This area produces fine woven cloth."
+"NODE_ICON_GOLD","There is a gold mine here."
+"NODE_ICON_SILVER","Silver is mined in this area."
+"NODE_ICON_IRON","This area contains an iron mine."
