--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -20,10 +20,13 @@ Editor Improvements:
 		✓ Node header / icons
 		✓ Node attributes
 		✓ Node units
-	* Code a function on the sidebar to receive data and draw it
-	* Mock a new region object and pass it in
-	* Render the data
+	✓ Code a function on the sidebar to receive data and draw it
+	✓ Mock a new region object and pass it in
+	✓ Render the data
 	* Render all the required icons (the region properties, keep simple for now)
+			✓ Gold / ✓ Silver / ✓ Iron / ✓ Wine / ✓ Cloth / Pottery / ✓ Fish / ✓ Grain
+			✓ Maths / ✓ Engineering / ✓ Writing / ✓ History / ✓ Music
+			✓ Temple / ✓ Port / ✓ Aquaduct / ✓ Colosseum
 	* Add to game, ignoring current callback for now
 	* Account for screen area view size when displaying tooltips
 	✓ Import the texts you need in a nicer way
