Added translations for all node icon description texts

--- a/SPQR2/translations/translations.csv
+++ b/SPQR2/translations/translations.csv
@@ -28,3 +28,38 @@
 "NODE_ICON_GOLD","There is a gold mine here."
 "NODE_ICON_SILVER","Silver is mined in this area."
 "NODE_ICON_IRON","This area contains an iron mine."
+"NODE_POP_VERY_HIGH","This area is crowded with people."
+"NODE_POP_HIGH","Here is a very busy place, with a high population."
+"NODE_POP_AVERAGE","There is nothing remarkable about number of people."
+"NODE_POP_LOW","This area is quiet and villages are hard to find."
+"NODE_POP_VERY_LOW","Almost nobody lives here."
+"NODE_POP_VERY_NONE","This place is devoid of people."
+"NODE_ROMANISATION_VERY_HIGH","All people here are Roman citizens of good moral standing."
+"NODE_ROMANISATION_HIGH","The population here are very strongly Roman."
+"NODE_ROMANISATION_AVERAGE","The people here respect and obey Roman commands."
+"NODE_ROMANISATION_LOW","The population are unsure about Roman authority."
+"NODE_ROMANISATION_VERY_LOW","These people need to be sometimes reminded of Rome’s power."
+"NODE_ROMANISATION_NONE","The people here do not respect Rome."
+"NODE_ROMANISATION_REVOLT","The barbarian population here are trying to overturn Roman power."
+"NODE_WEALTH_VERY_HIGH","This whole area is famed for it’s wealth."
+"NODE_WEALTH_HIGH","This area produces very high taxes and is very rich."
+"NODE_WEALTH_AVERAGE","This area is a little poor and need support."
+"NODE_WEALTH_LOW","The people here are poor, and it is not worth supporting them."
+"NODE_WEALTH_VERY_LOW","This area has little to no resources or money."
+"NODE_WEALTH_NEGATIVE","This area is so poor it cannot pay it’s administration."
+"NODE_HAPPINESS_VERY_HIGH","These people love Rome."
+"NODE_HAPPINESS_HIGH","The people here have no reason to complain."
+"NODE_HAPPINESS_AVERAGE","The people here choose not to complain."
+"NODE_HAPPINESS_LOW","The people here complain a lot."
+"NODE_HAPPINESS_VERY_LOW","The people here sometimes violently complain."
+"NODE_CHRISTIAN_ZEALOT","This area is full of zealots and is hard to control."
+"NODE_CHRISTIAN_VERY_HIGH","An area of god-fearing people who follow the church."
+"NODE_CHRISTIAN_HIGH","Christianity has taken hold and almost no other religion is followed."
+"NODE_CHRISTIAN_AVERAGE","Christians take up a signification number of the population."
+"NODE_CHRISTIAN_LOW","Some churches have taken root but none of significance."
+"NODE_CHRISTIAN_VERY_LOW","This area has followers of Christ."
+"NODE_CHRISTIAN_NONE","People here follow the Roman and Greek gods."
+"NODE_RELIGION_JEWISH","This area is mainly populated by Jewish people."
+"NODE_RELIGION_DRUID","The people here follow Druidic practices."
+"NODE_RELIGION_PAGAN","This area follows local pagan gods."
+"NODE_RELIGION_EASTERN","The people here follow either Persian or Eastern religions."
